# playwrite_tutorial

./: .gitignore  README.md  forai-scaffold.skill  main.py  pyproject.toml
_forAI/: README.md  dev_log.md  inventory.md  memo.md  plan.md
src/playwrite_tutorial/: __init__.py  __main__.py  browser.py  ex01.py  ex02.py  ex03.py  macros.py
